@@ -16,17 +16,17 @@
  *      code distribution. The list can also be seen at the
  *      following World Wide Web location:
  *      http://sources.redhat.com/pthreads-win32/contributors.html
- * 
+ *
  *      This library is free software; you can redistribute it and/or
  *      modify it under the terms of the GNU Lesser General Public
  *      License as published by the Free Software Foundation; either
  *      version 2 of the License, or (at your option) any later version.
- * 
+ *
  *      This library is distributed in the hope that it will be useful,
  *      but WITHOUT ANY WARRANTY; without even the implied warranty of
  *      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
  *      Lesser General Public License for more details.
- * 
+ *
  *      You should have received a copy of the GNU Lesser General Public
  *      License along with this library in the file COPYING.LIB;
  *      if not, write to the Free Software Foundation, Inc.,
@@ -35,26 +35,26 @@
  * --------------------------------------------------------------------------
  *
  * Test Synopsis: Test setting cancel state and cancel type.
- * - 
+ * -
  *
  * Test Method (Validation or Falsification):
- * - 
+ * -
  *
  * Requirements Tested:
  * - pthread_setcancelstate function
  * - pthread_setcanceltype function
  *
  * Features Tested:
- * - 
+ * -
  *
  * Cases Tested:
- * - 
+ * -
  *
  * Description:
- * - 
+ * -
  *
  * Environment:
- * - 
+ * -
  *
  * Input:
  * - None.
@@ -152,7 +152,7 @@ main()
    * Standard check that all threads started.
    */
   for (i = 1; i <= NUMTHREADS; i++)
-    { 
+    {
       failed = !threadbag[i].started;
 
       if (failed)
@@ -164,10 +164,10 @@ main()
   assert(!failed);
 
   /*
-   * Check any results here. Set "failed" and only print ouput on failure.
+   * Check any results here. Set "failed" and only print output on failure.
    */
   for (i = 1; i <= NUMTHREADS; i++)
-    { 
+    {
       /* ... */
     }
 
