@@ -1,3 +1,13 @@
+2012-10-10  Ross Johnson <ross dot johnson at homemail dot com dot au>
+
+	* cancel1.c: Fix comment typo.
+	* Makefile: Adding functionality to support rapid turnaround of
+	individual or small sets of tests.
+	* GNUmakefile: Likewise.
+	* common.mk: New makefile include file; split out common macros.
+	* runorder.mk: New makefile include file; split out run order rules
+	to allow selective inclusion.
+
 2012-10-04  Ross Johnson <ross dot johnson at homemail dot com dot au>
 
 	* join4.c: Modified for pthread_tryjoin_np tests.
